--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,34 @@
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  color: rgb(26, 87, 202);
+  text-decoration: unset;
+}
+
+ul {
+  margin-left: 1.5rem;
+  list-style: none;
+}
+
+button,
+input[type="sutmit"] {
+  border: none;
+  background: none;
+  color: unset;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+  margin: 1rem 0;
+}
+
 .App {
   text-align: center;
 }
