--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,8 +25,9 @@ input[type="sutmit"] {
   padding: 1rem;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, ol {
-  margin: 1rem 0;
+h1, h2, h3, h4, h5, p, ul, ol {
+  margin: 1rem 0.5rem;
+  text-align: center;
 }
 
 #header {
@@ -51,7 +52,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2.6vmin);
   color: white;
 }
 
